--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.1.1",
+    "swr": "^0.3.0",
     "typescript": "^3.7.4"
   },
   "scripts": {
