--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web",
-  "version": "0.1.0",
+  "name": "@proffy/web",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -22,8 +22,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.1.1",
-    "swr": "^0.3.0",
-    "typescript": "^3.7.4"
+    "swr": "^0.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
