web: use network package

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "packages": [
       "packages/web",
       "packages/mobile",
-      "packages/server"
+      "packages/server",
+      "packages/network"
     ]
   },
   "devDependencies": {
