--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -8,15 +8,19 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "postinstall": "expo-yarn-workspaces postinstall"
+    "generate:entry": "expo-yarn-workspaces postinstall"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.1.0",
     "@expo-google-fonts/poppins": "^0.1.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/picker": "1.6.0",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@unform/core": "^2.1.3",
+    "@unform/mobile": "^2.1.3",
+    "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-font": "^8.2.2",
     "expo-status-bar": "^1.0.2",
@@ -33,6 +37,8 @@
     "@babel/core": "^7.8.6",
     "@types/react": "^16.9.0",
     "@types/react-native": "~0.62.13",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux-saga": "^0.10.5",
     "expo-yarn-workspaces": "^1.2.1"
   },
   "private": true
